[project]
name = 'pylandau'
version = '2.2.2'
description = 'A Landau PDF definition to be used in Python.'
license = {file = 'LICENSE'}
requires-python = '>=3.8'
readme = 'README.md'
authors = [
    {name = 'David-Leon Pohl', email = 'pohl@physik.uni-bonn.de'}, 
    {name = 'Christian Bespin', email = 'bespin@physik.uni-bonn.de'},
    {name = 'Bong-Hwi Lim', email = 'bong-hwi.lim@cern.ch'}
]
maintainers = [ 
    {name = 'Christian Bespin', email = 'bespin@physik.uni-bonn.de'}
]
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
]

[project.urls]
repository = 'https://github.com/SiLab-Bonn/pyLandau'

[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "wheel",
    "numpy>=1.21",
    "pybind11>=2.6",
]
build-backend = "setuptools.build_meta"
